--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"type": "git",
 		"url": "https://github.com/timborodin/pstats.git"
 	},
+	"bugs": "https://github.com/timborodin/pstats/issues",
 	"main": "index.js",
 	"devDependencies": {
 		"q": "1.0.x"
